letPoly/testcases/letPoly/ill-Typed/encodingPairPrime.lam
if ((lam p . p (lam x . lam y . x)) ((lam x . lam y . lam k . k x y) (zero) (zero))) then zero else zero